Nginx-deployment-app-2/ingress-alb-app2.yml
## EKS ALB Ingress for DevOps Academy NGINX App 2
## - Creates a separate internet-facing ALB routing to devops-academy-nginx-2

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-academy-alb-2
  namespace: staging #staging
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-academy-nginx-2
                port:
                  number: 80
